--- a/vignettes/usage-newsanchor.Rmd
+++ b/vignettes/usage-newsanchor.Rmd
@@ -19,29 +19,29 @@ library(newsanchor)
 ```
 
 <br> This is an introductory vignette to the **newsanchor** package. The package connects to https://newsapi.org/. **News API** is a simple HTTP REST API for searching and retrieving live articles from all over the web. You can get breaking news headlines, and search for articles from over 30,000 news sources and blogs. <br>
-The API can be used for free for non-commercial use cases, _[but you might experience some restrictions in your results]_. Please see also https://newsapi.org/pricing for commerical options. <br><br>
+The API can generally be used for free for non-commercial use cases, _[but you might experience some restrictions in your results]_. Please see also https://newsapi.org/pricing for commerical options. <br><br>
 
-The package helps you to answer questions like:<br>
+The package helps you to answer questions like the following:<br>
 
 - What are the **top stories** running right now in the world?
-- What **articles** were published about your favorite politician, moviestar, singer, or celebrity **today**?
+- What **articles** were published about your favorite politician, movie star, singer, or celebrity **today**?
 - What are the breaking news in **business**, **entertainment**, or **sports**?
 
-The package is made publicly available at GitHub and hopefully soon at CRAN as well. In this vignette we demonstrate basic features of the package. In a second vignette, we show how the package can be used to scrap your results from an online newspaper (i.e. Spiegel online).<br><br>
+The package is publicly available at GitHub and hopefully soon at CRAN as well. In this vignette we demonstrate basic features of the package. In a second vignette, we show how the package can be used to scrape your results from an example online newspaper (Spiegel Online in our case).<br><br>
 
 ## Authentication
-You need an API key to access https://newsapi.org. You can apply for a key at https://newsapi.org/register/. The function below appends the key automatically to your R environment file. Hence, every time you start R the key is loaded. The function `get_headlines`, `get_headlines_all`, `get_everything`, `get_everything_all`, and `get_sources` access your key automatically by executing `Sys.getenv("NEWS_API_KEY")`. Alternatively, you can provide an explicit definition of your api_key with each function call.<br><br>
+You need an API key to access https://newsapi.org. You can apply for a key at https://newsapi.org/register/. The function below appends the key automatically to your R environment file. Hence, every time you start R the key is loaded. The functions `get_headlines`, `get_headlines_all`, `get_everything`, `get_everything_all`, and `get_sources` access your key automatically by executing `Sys.getenv("NEWS_API_KEY")`. Alternatively, you can provide an explicit definition of your api_key with each function call.<br><br>
 
 ```{r set_api_key}
 # save the api key in the .Renviron file
-set_api_key(api_key = "xxx", 
+set_api_key(api_key = "YOUR API KEY", 
             path = "~/.Renviron")
 ```
 
 <br>
 
 ## get_headlines / get_headlines_all
-This endpoint returns breaking news headlines for a country and category, or currently running on a single or multiple sources. This is perfect if you want to download live up-to-date news headlines and images. You can provide **specific news-sources**, **categories**, **countries**, and/or **queries**. For valid searchterms see the respective paragraph below.
+These functions connect to the API's endpoint that returns breaking news headlines for a country and category, or currently running on a single or multiple sources. This is perfect if you want to download live up-to-date news headlines and images. You can provide **specific news-sources**, **categories**, **countries**, and/or **queries**. For valid searchterms see the respective paragraph below.
 
 ```{r headlines: examples}
 # get headlines published by the Washington Post
@@ -75,8 +75,8 @@ To automatically download all results, use **get_headlines_all**. This function 
 results <- get_headlines_all(category = "sports")
 ```
 
-**search terms:**<br>
-We provide different dataframes `terms_category`, `terms_sources`, and `terms_country` with valid search terms.
+**searchterms:**<br>
+We provide different dataframes :`terms_category`, `terms_sources`, and `terms_country`. They contain information on valid search terms. Access them if you are not sure whether some country or some source will work.
 
 ```{r headlines: searchterms}
 terms_category
@@ -95,9 +95,9 @@ terms_sources
 
 
 ## get_everything / get_everything_all
-This endpoint searches through articles from large and small news sources and blogs. This includes breaking news as well as lesser articles. This function needs a **query** with each function call. You have the following additional options for a more advanced search: <br>
+This endpoint searches through articles from large and small news sources and blogs. This includes breaking news as well as other kinds of normal articles. This function needs a compulsory `query` with each function call. You can make your search more fine-tuned using the following additional options: <br>
 
-- surround entire phrases with quotes (") for exact matches. 
+- surround entire phrases with quotes ("") for exact matches. 
 - prepend words/phrases that must appear with "+" symbol (e.g., +bitcoin). 
 - prepend words that must not appear with "-" symbol (e.g., -bitcoin). 
 - you can also use AND, OR, NOT keywords (optionally grouped with parenthesis, e.g., 'crypto AND (ethereum OR litecoin) NOT bitcoin)').
@@ -110,7 +110,7 @@ results <- get_everything(query = "Trump says")
 ```
 
 
-<br> As stated above, you always have to provide a `query` with the function call. However, you can limit your results to multiple **sources**, different **languages**, or different **domains**. You are also able to **exclude_domains** or mark the start (**from**) or end (**to**) of your search. 
+<br> As stated above, you always have to provide a `query` with the function call. However, you can limit your results to multiple **sources**, different **languages**, or different **domains**. You are also able to **exclude_domains** or mark the start (**from**) or end (**to**) time of your search. 
 
 ```{r everything: examples}
 # get everything published about Trump
@@ -129,11 +129,13 @@ results <- get_everything(query = "Trump", from = "2018-09-08")
 
 **Limitations:** <br>
 
-- **YANNIK: Welche Sachen schließen sich aus? (cf. get_headlines)**
-- **hier vielleicht auf die from-to Sachen verweisen? default = oldest available date**
+- If you use the option `sources`, there is a limitation to 20 sources. 
+- The options of `from` and `to` should be in ISO 8601 format.
+- The `language` needs to be a two digits ISO 639-1 code. You can only use one language for a search, default is all.
+- Some limitations are restricted to the free plan of www.newsapi.org. For example, you cannot access articles that have been published more than a month ago. This can only be accomplished using the paid plan. 
 
 **Additional settings:**<br>
-The default of https://newsapi.org only allows to get maximal 100 results per search. Since some search terms might yield much more results, you can use the option **page** to browse throught your results (per default: page = 1). You can change the number of results returned per request using **page_size** (per default: page_size = 100). 
+The default of https://newsapi.org only allows to get a maximum of 1,000 results per search. Since some search terms might yield much more results, you can use the option **page** to browse throught your results (per default: page = 1). You can change the number of results returned per request using **page_size** (per default: page_size = 100). 
 
 ```{r everything: page, page_size}
 results <- get_everything(query = "Trump", page = 2)
@@ -156,10 +158,10 @@ results <- get_everything(query = "Trump", sort_by = "publishedAt")
 To automatically download all results, use **get_everything_all**. This function is build around `get_everything` and provides the same options (except for *page* and *page_size*). 
 
 ```{r everything: get_all}
-results <- get_everything_all(category = "sports")
+results <- get_everything_all(query = "Trump")
 ```
 
-**search terms:**<br>
+**searchterms:**<br>
 We provide different dataframes `terms_language` and `terms_sources` with valid search terms.
 **YANNIK: Sources verwendest du gar nicht, oder?**
 ```{r everything: searchterms}
