add lars name to vignette

--- a/vignettes/usage-newsanchor.Rmd
+++ b/vignettes/usage-newsanchor.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Usage of newsanchor"
-author: "Correlaid"
+author: "Lars Schulze <lars.schulze@hotmail.com>"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
