--- a/vignettes/usage-newsanchor.Rmd
+++ b/vignettes/usage-newsanchor.Rmd
@@ -19,7 +19,7 @@ library(newsanchor)
 ```
 
 <br> This is an introductory vignette to the **newsanchor** package. The package connects to https://newsapi.org/. **News API** is a simple HTTP REST API for searching and retrieving live articles from all over the web. You can get breaking news headlines, and search for articles from over 30,000 news sources and blogs. <br>
-The API can generally be used for free for non-commercial use cases, _[but you might experience some restrictions in your results]_. Please see also https://newsapi.org/pricing for commerical options. <br><br>
+The API can generally be used for free for non-commercial use cases. However, please be aware, that this results in some restrictions. For instance, you cannot download more than 1.000 results. Please see also https://newsapi.org/pricing for commerical options. <br><br>
 
 The package helps you to answer questions like the following:<br>
 
@@ -27,7 +27,7 @@ The package helps you to answer questions like the following:<br>
 - What **articles** were published about your favorite politician, movie star, singer, or celebrity **today**?
 - What are the breaking news in **business**, **entertainment**, or **sports**?
 
-The package is publicly available at GitHub and hopefully soon at CRAN as well. In this vignette we demonstrate basic features of the package. In a second vignette, we show how the package can be used to scrape your results from an example online newspaper (Spiegel Online in our case).<br><br>
+The package is publicly available at GitHub and hopefully soon at CRAN as well. In this vignette we demonstrate basic features of the package. In a second vignette, we show how the package can be used to scrape your results from an example online newspaper (i.e. New York Times).<br><br>
 
 ## Authentication
 You need an API key to access https://newsapi.org. You can apply for a key at https://newsapi.org/register/. The function below appends the key automatically to your R environment file. Hence, every time you start R the key is loaded. The functions `get_headlines`, `get_headlines_all`, `get_everything`, `get_everything_all`, and `get_sources` access your key automatically by executing `Sys.getenv("NEWS_API_KEY")`. Alternatively, you can provide an explicit definition of your api_key with each function call.<br><br>
@@ -76,7 +76,7 @@ results <- get_headlines_all(category = "sports")
 ```
 
 **searchterms:**<br>
-We provide different dataframes :`terms_category`, `terms_sources`, and `terms_country`. They contain information on valid search terms. Access them if you are not sure whether some country or some source will work.
+We provide different dataframes :`terms_category`, `terms_sources`, and `terms_country`. They contain information on valid search terms. Access them if you are not sure whether some country or some sources will work.
 
 ```{r headlines: searchterms}
 terms_category
@@ -162,18 +162,16 @@ results <- get_everything_all(query = "Trump")
 ```
 
 **searchterms:**<br>
-We provide different dataframes `terms_language` and `terms_sources` with valid search terms.
-**YANNIK: Sources verwendest du gar nicht, oder?**
+We provide a dataframe `terms_language` with valid search terms.
 ```{r everything: searchterms}
 terms_language
-terms_sources
 ```
 
 
 <br>
 
 ## get_sources
-This function returns the subset of news publishers that top headlines are available from. 
+This function returns the subset of news publishers that top headlines are available from. This information is also provided in a dataframe `terms_sources`. However, this function also allows to return sources for  specific categories or languages.
 
 ```{r sources}
 publisher <- get_sources()
